--- a/_config.yml
+++ b/_config.yml
@@ -94,9 +94,10 @@ defaults:
       type: posts
     values:
       layout: single
+      classes: wide
       author_profile: true
       read_time: true
-      comments: true
+      comments: false
       share: true
       related: true
   # _pages
