--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,8 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: N2T
+subtitle: "Name to Thing"
+logo: "/assests/images/N2T-logo.svg"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
