--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: N2T
 subtitle: "Name to Thing"
-logo: "/assests/images/N2T-logo.svg"
+logo: "/assets/images/N2T-logo.svg"
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
