--- a/_config.yml
+++ b/_config.yml
@@ -14,14 +14,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: N2T
-subtitle: "Name to Thing"
+# subtitle: "Name to Thing"
 masthead_title: " " # overrides the website title displayed in the masthead, use " " for no title
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-logo: /assets/images/N2T-logo-tagline.png
+logo: /assets/images/N2T-logo-tagline.svg
 github_username: username
 minimal_mistakes_skin: default
 search: true
