--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: N2T
 # subtitle: "Name to Thing"
-masthead_title: " " # overrides the website title displayed in the masthead, use " " for no title
+masthead_title: "N2T" # overrides the website title displayed in the masthead, use " " for no title
 email:
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
